<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Socialite</string>
    <string name="eventName">eventName</string>
    <string name="eventLocation">eventLocation</string>
    <string name="eventTime">eventTime</string>
    <string name="eventCity">eventCity</string>
    <string name="eventState">eventState</string>
    <string name="eventZip">eventZip</string>
    <string name="title_activity_widget_config">Widget Configuration</string>
    <string name="configWidget">Location Settings</string>
    <string name="editZip">Zip code</string>
    <string name="editDistance">Distance (in Miles)</string>
    <string name="save">Save</string>
    <string name="wait">Fetching latest data from Internet…</string>
    <string name="notConnected">You must be connected for latest data. Using sample.</string>

</resources>
