<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventName"
            android:id="@+id/widgetEventName"
            android:textColor="#0075ff"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/widgetEventTime"
            android:text="@string/eventTime"
            android:layout_below="@id/widgetEventName"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/widgetEventCity"
            android:text="@string/eventCity"
            android:layout_below="@id/widgetEventTime"/>

        </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:src="@drawable/doc"
        android:id="@+id/imgButton"
        />

</LinearLayout>